# GB-Emulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
c_scratch_testing/: Makefile  test  test.cpp
resources/: icon.rc
src/: apu.cpp  apu.hpp  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  debugger.cpp  debugger.hpp  game_boy.cpp  game_boy.hpp  general.cpp  general.hpp  input.cpp  input.hpp  main.cpp  memory.cpp  memory.hpp  ppu.cpp  ppu.hpp  serial.cpp  serial.hpp  timer.cpp  timer.hpp  utils.hpp
tester/: tester.cpp
